--- a/package/.gitignore
+++ b/package/.gitignore
@@ -1,12 +1,16 @@
-orthologues/data
+orthologues/data/*
 orthologues/__pycache__
 orthologues/tests/__pycache__
 
-species_demarcation/data
+species_demarcation/data/*
 species_demarcation/__pycache__
 species_demarcation/tests/__pycache__
 
-core/data
+core/data/*
 core/__pycache__
 core/tests/__pycache__
+
+phylogenomic/data/*
+phylogenomic/__pycache__
+phylogenomic/tests/__pycache__
 
