Made much progress with smBGC. Will abandon it if time is not enough Started eggNOG

--- a/package/.gitignore
+++ b/package/.gitignore
@@ -14,3 +14,7 @@ phylogenomic/data/*
 phylogenomic/__pycache__
 phylogenomic/tests/__pycache__
 
+eggNOG/data/*
+eggNOG/__pycache__
+eggNOG/tests/__pycache__
+
