Altered entry point

--- a/package/.gitignore
+++ b/package/.gitignore
@@ -15,7 +15,7 @@ phylogenomic/__pycache__
 phylogenomic/tests/__pycache__
 
 eggNOG/data/*
-eggNOG/__pycache__/
+eggNOG/__pycache__
 eggNOG/__pycache__/*
 eggNOG/tests/__pycache__
 
