--- a/meta.yaml
+++ b/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "pyPGCF" %}
-{% set version = "0.1.0" %}
+{% set version = "0.1.1" %}
 
 package:
   name: "{{ name|lower }}"
@@ -14,6 +14,8 @@ source:
 build:
   number: 0
   noarch: python
+  entry_points:
+    pyPGCF = pypgcf.pyPGCF:main
 
 requirements:
   host:
