Fixed antiSMASH version. Added post-link to newer diamond version

--- a/meta.yaml
+++ b/meta.yaml
@@ -33,8 +33,7 @@ requirements:
     - tqdm
     - eggnog-mapper
     - biopython ==1.78
-    - antismash
-    - diamond ==2.0.13
+    - antismash ==6.1.1
 
 about:
   home: "https://github.com/Marios-Nikolaidis/pyPGCF"
