--- a/meta.yaml
+++ b/meta.yaml
@@ -1,12 +1,12 @@
 {% set name = "pyPGCF" %}
-{% set version = "0.1.1" %}
+{% set version = "0.1.2" %}
 
 package:
   name: "{{ name|lower }}"
   version: "{{ version }}"
 
 source:
-  git_url: "https://github.com/Marios-Nikolaidis/pyPGCF"
+  git_url: "https://github.com/m-nikolaidis/pyPGCF"
   git_depth: 1
   #url: "https://github.com/Marios-Nikolaidis/{{ name }}/archive/refs/tags/{{ version }}.tar.gz"
   #sha256: 376f50e05b60f5c6f7b8316b98490d2aa30d6363c7cbb447aa2e75b7b5ef7e4c
@@ -34,6 +34,7 @@ requirements:
     - eggnog-mapper
     - biopython ==1.78
     - antismash
+    - diamond ==2.0.9
 
 about:
   home: "https://github.com/Marios-Nikolaidis/pyPGCF"
@@ -43,4 +44,4 @@ about:
 
 extra:
   recipe-maintainers:
-    - "Marios-Nikolaidis"
+    - "Marios Nikolaidis"
