--- a/meta.yaml
+++ b/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "pyPGCF" %}
-{% set version = "0.1.2" %}
+{% set version = "0.1.3" %}
 
 package:
   name: "{{ name|lower }}"
@@ -22,12 +22,12 @@ requirements:
     - gblocks
     - muscle ==3.8.*
     - pandas
-    - xlsxwriter
     - openpyxl
     - tqdm
-    - eggnog-mapper ==2.1.8
+    - eggnog-mapper
     - antismash ==7.1.0
     - mcl
+    - biopython ==1.78.*
 
 about:
   home: "https://github.com/m-nikolaidis/pyPGCF"
